--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "axios": "^0.21.1",
     "mongoose": "^5.12.3",
     "next": "10.1.3",
+    "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "typed.js": "^2.0.12"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1"
   }
 }
