--- a/package.json
+++ b/package.json
@@ -8,20 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
-    "mongoose": "^5.12.3",
+    "boxicons": "^2.0.9",
+    "contentful": "^8.4.2",
+    "framer-motion": "^4.1.17",
     "next": "10.1.3",
     "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "typed.js": "^2.0.12"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^2.0.1"
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-styled-components": "^1.13.2"
   }
 }
